# kube_sidecar_vpn

./: .gitignore  README.md  pyproject.toml
deployment/: Dockerfile  build_and_push_dev.sh  build_and_push_prod.sh
kube_sidecar_vpn/: main.py
kube_sidecar_vpn/http_server/: server.py
kube_sidecar_vpn/wrapper/: exceptions.py  wrapper.py
tests/: test_default_route.py  test_execute_command.py  test_get_routes.py  test_routes.py
